--- a/style2.css
+++ b/style2.css
@@ -65,7 +65,7 @@
     padding-top: 200px;
   }
   .section1 span{
-    color: rgba(57, 54, 248, 0.801);
+    color: rgb(5, 136, 44);
   }
   .section1 p{
     font-family: 'Times New Roman', Times, serif;
