--- a/style2.css
+++ b/style2.css
@@ -65,7 +65,7 @@
     padding-top: 200px;
   }
   .section1 span{
-    color: rgb(5, 136, 44);
+    color: rgb(54 255 0);
   }
   .section1 p{
     font-family: 'Times New Roman', Times, serif;
