--- a/style2.css
+++ b/style2.css
@@ -51,7 +51,7 @@
     color: white;
   }
   .section1{
-    background-image: url(cryptocurrency.jpg);
+    background-image: url(bitcoin bkc.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 40vh;
